# DocParse_Arena

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.ko.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  run.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  seed_db.py
backend/app/: auth.py  config.py  main.py  vlm_registry.py
backend/app/models/: database.py  schemas.py
backend/app/ocr_providers/: base.py  claude.py  custom.py  gemini.py  mistral.py  ollama.py  openai_gpt.py
backend/app/routers/: admin.py  battle.py  documents.py  leaderboard.py  playground.py
backend/app/services/: diff_service.py  elo_service.py  ocr_service.py  pdf_service.py  postprocessors.py
backend/app/utils/: error_sanitizer.py  file_validation.py  mime.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/battle/: page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/app/playground/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Header.tsx
frontend/src/components/battle/: BattleArena.tsx  DocumentUpload.tsx  DocumentViewer.tsx  ModelResult.tsx  VoteButtons.tsx
frontend/src/components/leaderboard/: HeadToHeadMatrix.tsx  RankingTable.tsx
frontend/src/components/playground/: ModelSelector.tsx  PlaygroundResult.tsx  SampleDocuments.tsx
frontend/src/lib/: api.ts  markdown-config.ts  markdown-utils.ts
(+7 files in other folders)
